changes to resources

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=${DATABASE_URL}
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.use-new-id-generator-mappings=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
